--- a/edc_prn/templates/edc_prn/add_prn_popover.html
+++ b/edc_prn/templates/edc_prn/add_prn_popover.html
@@ -10,7 +10,7 @@ data-content="
 <a id='show-link-to-add-{{ prn_form.model }}' class='list-group-item list-group-item-warning'
 title='click to add'
 href='{{ prn_form.add_url }}?next={{ subject_dashboard_url }},appointment,subject_identifier&subject_identifier={{ subject_identifier }}&appointment={{ appointment_pk }}&{{ prn_form.visit_model_attr }}={{ prn_form.subject_visit }}&panel={{ prn_form.panel.pk }}'>
-<span class='text text-default text-nowrap small'><i class='fas fa-plus fa-1x fa-fw' aria-hidden='true'></i> {{ prn_form.verbose_name }}</span>
+<span class='text text-default text-nowrap small'><i class='fas fa-plus fa-1x fa-fw' aria-hidden='true'></i> {{ prn_form.verbose_name }} {% if not prn_form.panel.pk %}Invalid Panel!{% endif %}</span>
 </a>	
 {% endfor %}
 </div>
